<resources>
    <string name="app_name">Conecta4</string>
    <string name="title">Conecta 4</string>
    <string name="game_over">Fin del juego</string>
    <string name="game_over_message">¿Una ronda nueva?</string>
    <string name="round_already_finished">La partida ya esta acabada</string>
    <string name="invalid_movement">Movimiento no valido</string>
    <string name="round_title">Conecta 4R</string>
    <string name="new_round">Ronda nueva</string>
    <string name="round_restarted">Ronda reiniciada</string>
    <string name="list_preference_summary">Elige el tamaño del tablero</string>
    <string name="list_preference_title">Tamaño del tablero</string>
    <string name="checkbox_preference_summary">Pulsa si quieres escuchar musica</string>
    <string name="checkbox_preference_title">Musica</string>
    <string name="checkbox_randomPlayer_summary">Marcar para la asinacion aleatoria de usuarios al generar una ronda nueva</string>
    <string name="checkbox_randomPlayer_title">Jugaderes Aleatorios (Online)</string>
    <string name="playername_summary">Establece el nombre de usuario</string>
    <string name="playername_title">Nombre del jugador</string>
    <string name="logged_sign_summary">Indica si estas registrado en la aplicacion</string>
    <string name="logged_sing_title">Registrado"</string>

    <string name="settings">Configuracion</string>
    <string name="level_array_3">3 en raya</string>
    <string name="level_array_4">Conecta 4</string>
    <string name="level_array_5">Conecta 5</string>

    <string name="close_session">Cerrar sesión</string>

    <string name="game_online">Login: On-Line</string>
    <string name="game_offline">Login: Off-Line</string>

    <string name="login_first_text_view_text">Login</string>
    <string name="login_first_edit_text_hint">Nombre de usuario</string>
    <string name="login_second_edit_text_hint">Clave secreta</string>
    <string name="login_login_button_text">Entrar</string>
    <string name="login_cancel_button_text">Salir</string>
    <string name="login_new_user_button_text">Nuevo usuario</string>
    <string name="login_alert_dialog_title">Error</string>
    <string name="login_alert_dialog_message">Login fallido</string>
    <string name="login_alert_dialog_neutral_button_text">Inténtelo de nuevo</string>
    <string name="login_switch_game">Cambiar modo</string>
    <string name="error_reading_rounds">Error al leer las rondas</string>
    <string name="error_adding_round">"Error al añadir ronda"</string>
    <string name="error_updating_round">Error al actualizar ronda</string>
    <string name="error_deleting_round">Error al borrar ronda</string>
    <string name="repository_opening_error">Error al abrir repositorio</string>
    <string name="select_player_title">Selecciona adversario</string>
</resources>
