<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Ajustes del juego">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/levelsArray"
            android:entryValues="@array/levelsValues"
            android:key="boardsize"
            android:summary="@string/list_preference_summary"
            android:title="@string/list_preference_title"/>

        <CheckBoxPreference
            android:key="randomPlayer"
            android:summary="@string/checkbox_randomPlayer_summary"
            android:title="@string/checkbox_randomPlayer_title"
            android:defaultValue="true"/>

        <EditTextPreference
            android:key="playername"
            android:summary="@string/playername_summary"
            android:title="@string/playername_title"
            android:defaultValue="default" />
        <CheckBoxPreference
            android:key="logged"
            android:clickable="false"
            android:defaultValue="false"
            android:summary="@string/logged_sign_summary"
            android:title="@string/logged_sing_title"
            android:visibility="gone" />
    </PreferenceCategory>
</PreferenceScreen>
