<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackgroundColor"
    android:orientation="horizontal"
    android:padding="@dimen/login_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_first_text_view_margin_bottom"
            android:text="@string/login_first_text_view_text"
            android:textSize="@dimen/login_first_text_view_text_size" />
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_first_edit_text_hint" />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_second_edit_text_hint"
            android:inputType="textPassword" />
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_buttons_margin_top"
            android:orientation="horizontal">
            <Button
                android:id="@+id/login_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_login_button_text" />
            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_cancel_button_text" />
        </LinearLayout>
        <Button
            android:id="@+id/new_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_new_user_button_text" />
    </LinearLayout>
</ScrollView>